--- a/src/app/mainlayout/headerbar/headerbar.component.html
+++ b/src/app/mainlayout/headerbar/headerbar.component.html
@@ -1,8 +1,6 @@
-<mat-toolbar color="accent">
-  <span>Volet Admin</span>
-
-  <!-- This fills the remaining space of the current row -->
-  <span class="example-fill-remaining-space"></span>
+<mat-toolbar class="color">
+  <span>Volet de traitement</span>
+  <span class="fill-space"></span>
 
   <span></span>
 </mat-toolbar>
