--- a/src/app/GestionDeVentes/clients/clients.component.html
+++ b/src/app/GestionDeVentes/clients/clients.component.html
@@ -1,1 +1,94 @@
-<p>clients works!</p>
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>Listes des Clients </mat-card-title>
+  </mat-card-header>
+  <mat-divider></mat-divider>
+  <mat-card-content>
+    <div class="mat-elevation-z8">
+      <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder=" Filter">
+      </mat-form-field>
+
+      <table mat-table [dataSource]="dataSource">
+
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> identifiant </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="nom">
+          <th mat-header-cell *matHeaderCellDef> Nom </th>
+          <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="prenom">
+          <th mat-header-cell *matHeaderCellDef> Prenom </th>
+          <td mat-cell *matCellDef="let element"> {{element.prenom}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="statut">
+          <th mat-header-cell *matHeaderCellDef> Statut </th>
+          <td mat-cell *matCellDef="let element"> {{element.statut}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="photo">
+          <th mat-header-cell *matHeaderCellDef> Photo </th>
+          <td mat-cell *matCellDef="let element"> {{element.photo}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="tel">
+          <th mat-header-cell *matHeaderCellDef> Tel </th>
+          <td mat-cell *matCellDef="let element"> {{element.tel}} </td>
+        </ng-container>
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef> Email </th>
+          <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="adresse">
+          <th mat-header-cell *matHeaderCellDef> Adresse </th>
+          <td mat-cell *matCellDef="let element"> {{element.adresse}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="ville">
+          <th mat-header-cell *matHeaderCellDef> Ville </th>
+          <td mat-cell *matCellDef="let element"> {{element.ville}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="username">
+          <th mat-header-cell *matHeaderCellDef> Username </th>
+          <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="password">
+          <th mat-header-cell *matHeaderCellDef> Password </th>
+          <td mat-cell *matCellDef="let element"> {{element.password}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="proteger">
+          <th mat-header-cell *matHeaderCellDef> Proteger </th>
+          <td mat-cell *matCellDef="let element"> {{element.proteger}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <td mat-cell *matCellDef="let row; let element">
+            <button [disabled] ="(controle.iseditor) && (element.proteger) ? true : false || controle.isuser ? true : false"  mat-icon-button color="warn" (click)="onEdit(row)"><mat-icon>launch</mat-icon></button>
+            <button [disabled]="controle.iseditor ? true : false ||  controle.isuser ? true : false" mat-icon-button color="primary" (click)="onDelete(row.id)"><mat-icon>delete_outline</mat-icon></button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
+
+  </mat-card-content>
+</mat-card>
