--- a/src/app/GestionDeVentes/produits/produits.component.html
+++ b/src/app/GestionDeVentes/produits/produits.component.html
@@ -1,1 +1,89 @@
-<p>produits works!</p>
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>Listes des produits </mat-card-title>
+  </mat-card-header>
+  <mat-divider></mat-divider>
+  <mat-card-content>
+    <div class="mat-elevation-z8">
+      <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder=" Filter">
+      </mat-form-field>
+
+      <table mat-table [dataSource]="dataSource">
+
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> identifiant </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="nom">
+          <th mat-header-cell *matHeaderCellDef> Nom </th>
+          <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="nom_court">
+          <th mat-header-cell *matHeaderCellDef> Nom Court </th>
+          <td mat-cell *matCellDef="let element"> {{element.nom_court}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="prix_base">
+          <th mat-header-cell *matHeaderCellDef> Prix base </th>
+          <td mat-cell *matCellDef="let element"> {{element.prix_base}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="prix_vente">
+          <th mat-header-cell *matHeaderCellDef> Prix vente </th>
+          <td mat-cell *matCellDef="let element"> {{element.prix_vente}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="remise_max">
+          <th mat-header-cell *matHeaderCellDef> Remise max </th>
+          <td mat-cell *matCellDef="let element"> {{element.remise_max}} </td>
+        </ng-container>
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="unites">
+          <th mat-header-cell *matHeaderCellDef> Unites </th>
+          <td mat-cell *matCellDef="let element"> {{element.unites}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="image">
+          <th mat-header-cell *matHeaderCellDef> Image </th>
+          <td mat-cell *matCellDef="let element"> {{element.image}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="stock_init">
+          <th mat-header-cell *matHeaderCellDef> Stock init </th>
+          <td mat-cell *matCellDef="let element"> {{element.stock_init}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="stock_actuel">
+          <th mat-header-cell *matHeaderCellDef> Stock actuel </th>
+          <td mat-cell *matCellDef="let element"> {{element.stock_actuel}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="proteger">
+          <th mat-header-cell *matHeaderCellDef> Proteger </th>
+          <td mat-cell *matCellDef="let element"> {{element.proteger}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <td mat-cell *matCellDef="let row ; let element">
+            <button [disabled] ="((controle.iseditor) && (element.proteger) ? true : false ) || controle.isuser ? true : false" mat-icon-button color="warn" (click)="onEdit(row)"><mat-icon>launch</mat-icon></button>
+            <button [disabled]="controle.iseditor ? true : false ||  controle.isuser ? true : false" mat-icon-button color="primary" (click)="onDelete(row.id)"><mat-icon>delete_outline</mat-icon></button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
+
+  </mat-card-content>
+</mat-card>
