--- a/src/app/mainlayout/sidebar/sidebar.component.css
+++ b/src/app/mainlayout/sidebar/sidebar.component.css
@@ -11,13 +11,16 @@
   justify-content: center;
   child-align: middle;
   width: 300px;
+  background-color: rgb(52,50,50);
+  color: rgb(713,713,713);
 }
 .example-sidenav .mat-button{
-  width: 100%;
+  width: 96%;
   margin-top: 5px;
   margin-right: 5px;
   margin-left: 5px;
 }
+
 .example-sidenav .logo-wrapper{
   width: 100px;
   height: 100px;
